<resources>
    <string name="app_name">Inventory App</string>
    <string name="no_products_error">No products to display. Please enter some</string>
    <string name="no_thumbnail_error">Please click the camera icon to take a picture of the product</string>
    <string name="no_name_error">Please enter your product name</string>
    <string name="no_price_error">Please enter a price for your product</string>
    <string name="no_quantity_error">Please enter your product quantity</string>
    <string name="no_supplier_name_error">Please enter supplier name</string>
    <string name="no_supplier_phone_error">Please enter supplier phone</string>
    <string name="product_photo_error">Sorry, product photo could not be created</string>
    <string name="product_add_success">Product added successfully.</string>
    <string name="product_update_success">Product updated successfully.</string>
    <string name="product_info">Product Info</string>
    <string name="supplier_info">Supplier Info</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="sale">Sale</string>
    <string name="in_stock">In Stock: %d</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="minus_sign" translatable="false">-</string>
    <!--Hints-->
    <string name="product_name_hint">Name</string>
    <string name="product_price_hint">Price</string>
    <string name="product_quantity_hint">Quantity</string>
    <string name="supplier_name_hint">Supplier Name</string>
    <string name="supplier_phone_hint">Supplier Phone</string>
    <string name="edit_title">Edit Product</string>
    <string name="add_title">Add Product</string>
    <!--Delete dialog-->
    <string name="delete_warning_dialog_msg">Are you sure you want to delete this product ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!--Edit dialog-->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing ?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <!--Menus-->
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
</resources>
